# media-symlink-manager-server

./: .gitignore  Dockerfile  main.py  pyproject.toml  script.py
.github/workflows/: build.yml
src/media_symlink_manager_server/: __init__.py  db.py  dependencies.py  models.py  schemas.py  settings.py  utils.py
src/media_symlink_manager_server/routers/: fs.py  settings.py  tv.py
src/media_symlink_manager_server/tmdb_client/: client.py  utils.py
src/media_symlink_manager_server/tmdb_client/requests/: __init__.py  get_tv_details.py  get_tv_season_details.py  search_tv.py
