[tool.poetry]
name = "media-symlink-manager-server"
version = "0.1.0"
description = ""
authors = ["MuXiu1997 <muxiu1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = {extras = ["all"], version = "^0.104.1"}
requests = "^2.31.0"
fire = "^0.5.0"
pony = "^0.7.17"
requests-cache = "^1.1.1"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0"
mypy = "^1.6.1"
black = "^23.10.1"

[tool.poetry.group.build.dependencies]
nuitka = "^1.9.0"

[tool.poetry.scripts]
dev = "script:dev"
build = "script:build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
files = "src"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
